Fixed popups on Mobile Safari

--- a/src/includes/styles/notes.css
+++ b/src/includes/styles/notes.css
@@ -67,7 +67,6 @@ blockquote .note .icon:hover, blockquote .note .icon:focus {
     padding: var(--grid-subdivision-2);
     font-size: var(--font-size-sml-1);
     line-height: var(--grid-subdivision-3);
-
 }
 
 /* -------------- Popup - For desktop and larger touch-based devices -------------- */
@@ -140,15 +139,22 @@ blockquote .note .icon:hover, blockquote .note .icon:focus {
         position: fixed;
         left: 0;
         z-index: 100;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        padding-bottom: var(--grid);
+        border-radius: var(--grid-subdivision-1) var(--grid-subdivision-2) 0 0;
+        padding: var(--grid-subdivision-3);
+        padding-bottom: calc(var(--grid) + var(--grid-subdivision-2));
+        font-size: var(--font-size-base);
+        margin-left: var(--grid-subdivision-1);
+        margin-right: var(--grid-subdivision-1);
+        /* line-height: var(--grid-subdivision-3); */
+        line-height: var(--grid);
+        box-shadow: 0px 1px 40px 14px rgba(0, 0, 0, 0.2);
+        
         /* Transition settings to hidden state */
         /* Don't set visibility until opacity tween is complete.*/
-        bottom: -1em;
+        bottom: -10em;
         visibility: hidden;
         opacity: 0;
-        transition: visibility 0.15s, opacity 0.15s, bottom 0.35s;
+        transition: visibility 0.15s, opacity 0.15s, bottom 0.3s;
         transition-timing-function: ease-in;
     }
 
@@ -156,22 +162,22 @@ blockquote .note .icon:hover, blockquote .note .icon:focus {
     .note .icon:focus + .popup {
         /* Transition settings to visible state.*/
         /* Set visibility immediately (0s).*/
-        bottom: 0em;
+        bottom: -1px;
         visibility: visible;
         opacity: 1;
-        transition: visibility 0s, opacity 0.15s, bottom 0.35s;
+        transition: visibility 0s, opacity 0.25s, bottom 0.35s;
         transition-timing-function: ease-out;
     }
 
     /* Overlay */
-    /* .note .popup::after {
+    .note .popup::after {
         content: '';
         position: fixed;
         top: 0;
         left: 0;
         bottom: 0;
         right: 0;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.5);
         z-index: -1;
-    } */
+    }
 }
